[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hongo.gd" type="Script" id=1]
[ext_resource path="res://Sprits/Hongo/Hongo.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.5658, 73.7507 )

[sub_resource type="Animation" id=2]
resource_name = "Ataque"
length = 6.4
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Caminar"
length = 6.4
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Muerte"
length = 2.4
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12.3886, -16.2064 )
scale = Vector2( 4.02719, 4.02719 )
texture = ExtResource( 2 )
hframes = 19
frame = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.91893, -23.0656 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 9.0
anims/Ataque = SubResource( 2 )
anims/Caminar = SubResource( 3 )
anims/Muerte = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Hongo_izquierda" type="RayCast2D" parent="."]
position = Vector2( -41.8732, -2.6004 )
rotation = 1.5708
enabled = true

[node name="Hongo_Derecha" type="RayCast2D" parent="."]
position = Vector2( 44.4004, -5.51977 )
rotation = -1.5708
enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
